-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 2.8.0-beta
-
None
-
Ubuntu 12.04 32bit, MacOSX 10.8.3
-
903c58d9186498b0c3b58370422a993d0ef98ec5
It's not consistently reproducable but the things I found out so far:
- create a Qt Quick 2 project or UI and use Qml Profiler to profile some data
- play a bit around with the profiled data inside the timeline
- create a simple Qt GUI Application and use Qml Profiler there as well (although there's nothing to profile)
- wait for the messagebox regarding profiler failed to attach to the qml debugger and dismiss it
- switch to the Projects view - switch to the Qt Quick 2 app formerly used for profiling, switch to the run settings
- push FancyToolbutton Debug to start debugging
Note: These steps might need to repeated several times.
See also attached backtraces.
For Gerrit Dashboard: QTCREATORBUG-9391 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
57788,2 | QmlProfiler: fix dangling pointer in Engine | 2.8 | qt-creator/qt-creator | Status: ABANDONED | -1 | 0 |