QmlProfiler: fix dangling pointer in Engine

Task-number: QTCREATORBUG-9391

Change-Id: Ib2ea66bd5694046577a0b5a0e2f611f3ffba0238
Reviewed-by: Kai Koehne <kai.koehne@digia.com>