src/plugins/qmlprofiler/qmlprofilerengine.cpp
@@ -61,7 +61,7 @@ class QmlProfilerEngine::QmlProfilerEnginePrivate
 {
 public:
     QmlProfilerEnginePrivate(QmlProfilerEngine *qq) : q(qq), m_runner(0) {}
-    ~QmlProfilerEnginePrivate() { delete m_runner; }
+    ~QmlProfilerEnginePrivate() { m_runner->disconnect(); delete m_runner; }
 
     bool attach(const QString &address, uint port);
     static AbstractQmlProfilerRunner *createRunner(ProjectExplorer::RunConfiguration *runConfiguration,
@@ -153,6 +153,7 @@ bool QmlProfilerEngine::start()
     QTC_ASSERT(d->m_profilerState, return false);
 
     if (d->m_runner) {
+        d->m_runner->disconnect();
         delete d->m_runner;
         d->m_runner = 0;
     }
@@ -364,6 +365,7 @@ void QmlProfilerEngine::profilerStateChanged()
         // (a new one will be created at start)
         d->m_noDebugOutputTimer.stop();
         if (d->m_runner) {
+            d->m_runner->disconnect();
             delete d->m_runner;
             d->m_runner = 0;
         }
